# edaSol

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
edaSol/: __init__.py  core.py  visuals.py
